# wikidata-filter

./: Cargo.toml  LICENSE  Makefile  README.md  background.sh  fetch-identifier-properties.sh  identifier-properties  labels  properties  test.in.rdf  test.out.labels  test.out.rdf
.github/workflows/: ci.yaml
ansible/: README.md  ansible.cfg  run.yaml  setup.yaml  vultr.yml
src/: main.rs
