[package]
name = "wikidata-filter"
version = "0.1.0"
authors = ["Bastian Müller <bastian@turbolent.com>"]
edition = "2018"

[dependencies]
"bzip2" = "0.4.1"
"regex" = "1.4.2"
"lazy_static" = "1.4.0"
"lazy-static-include" = "3.0.5"
"num_cpus" = "1.13.0"
"crossbeam-channel" = "0.5.0"
"clap" = "3.0.0-beta.2"
"ctrlc" = "3.1.7"
dashmap = "4.0.2"
