[package]
name = "wikidata-filter"
version = "0.1.0"
authors = ["Bastian Müller <bastian@turbolent.com>"]
edition = "2021"

[dependencies]
"bzip2" = "0.4.3"
"regex" = "1.6.0"
"lazy_static" = "1.4.0"
"lazy-static-include" = "3.1.2"
"num_cpus" = "1.13.1"
"crossbeam-channel" = "0.5.6"
clap = { version = "3.2.17", features = ["derive"] }
"ctrlc" = "3.2.3"

[dev-dependencies]
"pretty_assertions" = "1.2.1"
