[package]
name = "wikidata-filter"
version = "0.1.0"
authors = ["Bastian Müller <bastian@turbolent.com>"]
edition = "2021"

[dependencies]
"bzip2" = "0.4.4"
"regex" = "1.10.5"
"lazy_static" = "1.4.0"
"lazy-static-include" = "3.2.1"
"num_cpus" = "1.16.0"
"crossbeam-channel" = "0.5.13"
clap = { version = "4.5.7", features = ["derive"] }
"ctrlc" = "3.4.4"

[dev-dependencies]
"pretty_assertions" = "1.4.0"
